--- a/src/main/resources/templates/admin/cbn-levies.html
+++ b/src/main/resources/templates/admin/cbn-levies.html
@@ -25,8 +25,9 @@
 
             <p class="text-gray-600">Levy applies in blocks of threshold for qualifying transactions based on Transfer Charge Controls.</p>
 
-            <div class="pt-4">
+            <div class="pt-4 space-x-3">
                 <a href="/admin/charge-control" class="px-4 py-2 bg-blue-600 text-white rounded hover:bg-blue-700">Manage Charge Controls</a>
+                <a href="/admin/charge-control" class="px-4 py-2 bg-green-600 text-white rounded hover:bg-green-700">Configure Rates & Fees</a>
             </div>
         </div>
     </div>
