--- a/src/main/resources/templates/layouts/legacy-layout.html
+++ b/src/main/resources/templates/layouts/legacy-layout.html
@@ -129,6 +129,7 @@
                         <li><a href="/admin/bank-transfers" class="flex items-center px-2 py-1 rounded hover:bg-gray-100"><i class="fas fa-university mr-2"></i> Bank Transfers</a></li>
                         <li><a href="#" class="flex items-center px-2 py-1 rounded hover:bg-gray-100"><i class="fas fa-file-invoice-dollar mr-2"></i> Bill Payments</a></li>
                         <li><a href="/admin/cbn-levies" class="flex items-center px-2 py-1 rounded hover:bg-gray-100"><i class="fas fa-balance-scale mr-2"></i> CBN Levies</a></li>
+                        <li><a href="/admin/charge-control" class="flex items-center px-2 py-1 rounded hover:bg-gray-100"><i class="fas fa-calculator mr-2"></i> Charge Control</a></li>
                         <li><a href="#" class="flex items-center px-2 py-1 rounded hover:bg-gray-100"><i class="fas fa-users-cog mr-2"></i> Customer escalations</a></li>
                         <li><a href="#" class="flex items-center px-2 py-1 rounded hover:bg-gray-100"><i class="fas fa-piggy-bank mr-2"></i> Fixed Savings Accounts</a></li>
                         <li><a href="#" class="flex items-center px-2 py-1 rounded hover:bg-gray-100"><i class="fas fa-cogs mr-2"></i> Fixed Savings Settings</a></li>
