--- a/src/main/resources/templates/admin/wallet-edit.html
+++ b/src/main/resources/templates/admin/wallet-edit.html
@@ -1,2 +1,2 @@
 <!DOCTYPE html>
-<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{layouts/admin-layout :: layout(pageTitle='Edit Wallet', contentTemplate='admin/content/wallet-edit-content')}"></html>
+<html lang="en" xmlns:th="http://www.thymeleaf.org" th:replace="~{layouts/legacy-layout :: layout(pageTitle='Edit Wallet', contentTemplate='admin/content/wallet-edit-content')}"></html>
